2008-04-16  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/ce-page-wired.glade
	  src/connection-editor/ce-page-wireless.glade
	  src/connection-editor/page-wireless.c
		- Fix up option constraints on MTU, Rate, and TX power
		- Use "automatic" not "default"
		- Add units labels to MTU, Rate, and TX Power

	* src/connection-editor/nm-connection-editor.c
		- (ce_spin_output_with_default): use 'automatic' not 'default'

2008-04-16  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-dsl.c
	  src/connection-editor/page-mobile.c
		- fetch secrets from the keyring to populate entries with

2008-04-16  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/ce-mobile-wizard.glade
	  src/connection-editor/mobile-wizard.c
	  src/connection-editor/mobile-wizard.h
	  src/connection-editor/Makefile.am
	  po/POTFILES.in
		- Add connection type chooser

	* src/connection-editor/nm-connection-list.c
		- (create_new_connection_for_type): handle mobile broadband too

2008-04-16  Dan Williams  <dcbw@redhat.com>

	* src/utils/utils.c
		- (utils_get_device_description): fix space addition when munging
			device descriptions

2008-04-15  Dan Williams  <dcbw@redhat.com>

	* src/ap-menu-item.c
	  src/applet-device-wireless.c
	  src/utils/utils.c
		- Replace IW_MODE_* with NM_802_11_MODE

2008-04-15  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/wireless-security.c
	  src/wireless-security/eap-method-leap.c
	  src/wireless-security/ws-dynamic-wep.c
	  src/wireless-security/eap-method-peap.c
	  src/wireless-security/eap-method-ttls.c
	  src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-leap.c
	  src/wireless-security/ws-wpa-psk.c
	  src/wireless-security/eap-method-simple.c
	  src/wireless-security/eap-method-tls.c
		- Don't require 'connection_id' as this won't have been determined when
			adding a new connection

2008-04-15  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h