@@ -1,3 +1,9 @@
+2008-04-17  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/nm-connection-editor.c
+		- (connection_editor_update_connection): save 'autoconnect' back to the
+			connection
+
 2008-04-16  Dan Williams  <dcbw@redhat.com>
 
 	* src/connection-editor/ce-page-wired.glade
